# sci-retrieval-eval

./: .gitignore  AGENTS.md  README.md  SESSION_BOARD.md  TASK.md  config.example.yaml  pyproject.toml  report.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/ai/: current_status.md  development_background.md  development_plan.md  handoff_template.md  open_questions.md  project_brief.md
docs/decisions/: 0001-artifact-driven-eval.md  0002-normalized-dataset-schema.md  0003-mteb-dataset-adapter.md  0004-chunked-corpus-schema.md  0005-chunking-runner.md  0006-version-pinned-external-chunker-adapter.md  0007-sciverse-admin-ingest-adapter.md  0008-embedding-runner-s3.md  0009-http-embedding-client.md  0010-embedding-consistency-hardening.md  0011-raw-dataset-artifact.md  0012-raw-to-normalized-dataset.md  0013-platform-config-system.md  0014-sharded-corpus-artifacts.md  0015-elasticsearch-index-artifact.md  0016-milvus-collection-artifact.md  0017-corpus-build-runner.md  0018-raw-normalizers-all-datasets.md  0019-retrieval-run-artifact.md  0020-metrics-run-artifact.md  0021-live-retrieval-adapters.md  0022-benchmark-run-artifact.md  0023-asset-fingerprint-spec.md
docs/operations/: e1_e4_benchmark_suite.md  experiment_runs.md  experiment_variants.md  five_dataset_corpus_assets.md
scripts/: build_real_corpus_assets.py  corpus_asset_common.py  inventory_real_corpus_assets.py  view_s3_artifacts.py
src/eval_platform/: __init__.py  defaults.py
tests/: test_cli.py
tests/artifacts/: __init__.py  test_catalog.py  test_local_store.py  test_manifest.py  (+3 more)
(+171 files in other folders)
