[project]
name = "sci-retrieval-eval"
version = "0.1.0"
description = "Artifact-driven evaluation platform for scientific literature retrieval."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
